fix: fix the debug console and the left outline style are not aligned

--- a/packages/debug/src/browser/view/console/debug-console.module.less
+++ b/packages/debug/src/browser/view/console/debug-console.module.less
@@ -18,6 +18,7 @@
   .variable_repl_editor {
     width: 100%;
     z-index: 99;
+    margin-top: 4px;
 
     :global(.margin) {
       display: none;
